[tool.poetry]
name = "06-1-19-1-web-basics"
version = "0.1.0"
description = ""
authors = ["DSulzhits <dsulzhits@gmail.com>"]
readme = "README.md"
packages = [{include = "06_1_19_1_web_basics"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
